[package]
name = "snap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = "0.4.44"
colored = "3.1.1"
home = "0.5.12"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.38.4"
tokio = {version = "1.50.0",features = ["rt-multi-thread"]}
tracing = { version = "0.1.44" }
tracing-appender = {version = "0.2.4"}
tracing-subscriber = { version = "0.3.23",features = ["chrono","env-filter"] }
